changed table header color and added files to gitignore

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,6 +33,6 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04AA6D;
+  background-color: #9068b6;
   color: white;
 }
