added navbar and a blank skills page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,13 +4,47 @@ body {
 
 .App {
   text-align: center;
-  display: flex;
+  /* display: flex; */
   min-height: 70vh;
   align-items: center;
   justify-content: center;
 }
 
+a {
+  display: block;
+  padding: 30px;
+}
+
+.navbar-brand {
+  font-size : 40px;
+}
+
 .App-header {
+  min-height: 100vh;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+}
+
+.navbar-custom {
+  font-size : 24px;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0;
+  text-align: left;
+  display: inline;
+  align-items: stretch;
+  justify-content: left;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  width: 100%
+  
+ }
+
+.Login-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -87,3 +121,4 @@ button {
   color: black;
   text-decoration: underline;
 }
+
