--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -71,7 +71,7 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #9068b6;
+  background-color: green;
   color: white;
 }
 
