--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,7 +60,7 @@ a {
 
 td, th {
   border: 1px solid #ddd;
-  padding: 8px;
+  padding: 10px;
 }
 
 tr:nth-child(even){background-color: #f2f2f2;}
@@ -71,8 +71,13 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: green;
+  background-color: #9068b6;
   color: white;
+  font-size: 20px;
+}
+
+td {
+  font-size: 14px;
 }
 
 .fixed-top {
@@ -122,3 +127,14 @@ button {
   text-decoration: underline;
 }
 
+.addJobButton {
+  margin: 20px 10px;
+  cursor: pointer;
+  font-weight: 500;
+  padding: 13px 25px;
+  border-radius: 15px;
+  font-size: 0.8rem;
+  border: none;
+  color: white;
+  background: #9068b6;
+}
